# Brightmoon-Translator

./: .eslintrc.json  .gitignore  ARCHITECTURE.md  FEATURES.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_server.rs  blacklist.rs  cache.rs  config.rs  dictionary.rs  epub_reader.rs  glossary.rs  lang_detect.rs  lib.rs  main.rs  memory.rs  metrics.rs  pdf.rs  plugin.rs  post_process.rs  subtitle.rs  tts.rs
src-tauri/src/capabilities/: adapters.rs  browser_translation.rs  document_translation.rs  input_replacement.rs  input_replacement_impl.rs  mod.rs  ocr_translation.rs  selection_translation.rs  selection_translation_impl.rs
src-tauri/src/capabilities/platform/: app_detector.rs  mod.rs  (+1 more)
src-tauri/src/commands/: cache_cmd.rs  capture.rs  config_cmd.rs  epub_cmd.rs  glossary_cmd.rs  history_cmd.rs  mod.rs  ocr.rs  pdf_cmd.rs  plugin_cmd.rs  post_process_cmd.rs  subtitle_cmd.rs  tools_cmd.rs  translate.rs  tts_cmd.rs  window.rs  wordbook_cmd.rs
src-tauri/src/engine/: baidu.rs  deepl.rs  deeplx.rs  google.rs  llm.rs  microsoft.rs  mod.rs  yandex.rs  youdao.rs
src-tauri/src/models/: browser_protocol.rs  config.rs  detection.rs  dictionary.rs  error.rs  glossary.rs  memory.rs  mod.rs  translation.rs
src-tauri/src/overlay/: follow_controller.rs  html_builder.rs  interaction.rs  mod.rs  positioner.rs  window_manager.rs
src-tauri/src/selection/: clipboard.rs  manager.rs  mod.rs  uiautomation.rs
src-tauri/src/services/: mod.rs  translation.rs
(+47 files in other folders)
