[package]
name = "moontranslator"
version = "0.1.0"
edition = "2021"

[lib]
name = "moontranslator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "moontranslator"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json", "stream", "deflate", "gzip", "brotli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
base64 = "0.22"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
dirs = "5"
urlencoding = "2"
html-escape = "0.2"
screenshots = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
pdf-extract = "0.7"
epub = "2"
zip = "0.6"
regex = "1"
md5 = "0.7"
rand = "0.8"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
